fix(product-variant): add multipart form data for create and update
